tests/NormalTests/paczka1/fuzzy1/60742628.err
Error in line 7: PYUbjaLQ A572 72,1
Error in line 13: PYUbjaLQ S848 24,6
Error in line 20: uVD3xEjWK A572 85,4
Error in line 12: EVymaP S848 10,5
